--- a/index.html
+++ b/index.html
@@ -164,8 +164,8 @@ License URL: https://creativecommons.org/licenses/by/4.0/
                     </div>
                     <div class="col-md-3 col-sm-6">
                         <div class="skill-item">
-                            <p>C++</p>
-                            <h2><span class="counter"> 80 </span><span>%</span></h2>
+                            <p>Java</p>
+                            <h2><span class="counter"> 60 </span><span>%</span></h2>
                         </div>
                     </div>
                 </div>
