--- a/index.html
+++ b/index.html
@@ -73,7 +73,7 @@ License URL: https://creativecommons.org/licenses/by/4.0/
                 <h2 class="mb-0">Nguyen Phuc Loi
                 </h2>
                 <div class="mb-0">
-                    My name's Loi i'm a developer. I'm 21 years old.
+                    My jod's developer. I'm 21 years old.
                 </div>
                 <div class="mb-5">
                     I live in Ho Chi Minh city in the south of Vietnam
