--- a/index.html
+++ b/index.html
@@ -91,7 +91,7 @@ License URL: https://creativecommons.org/licenses/by/4.0/
                         </a>
                     </li>
                     <li class="list-inline-item">
-                        <a href="#">
+                        <a href="www.linkedin.com/in/loinp">
                             <span class="fa-stack fa-lg">
                                 <i class="fa fa-circle fa-stack-2x"></i>
                                 <i class="fa fa-linkedin fa-stack-1x fa-inverse"></i>
@@ -126,7 +126,6 @@ License URL: https://creativecommons.org/licenses/by/4.0/
                             <h4 class="mb-3"><i class="fa fa-globe mr-3 text-info"></i>Developer</h4>
                             <p>
                                     The work I do at tinylife is back-end developer, devOps, mobile and web developer.
-
                             </p>
                         </div>
                         <div class="resume-date text-md-right">
