--- a/index.html
+++ b/index.html
@@ -91,7 +91,7 @@ License URL: https://creativecommons.org/licenses/by/4.0/
                         </a>
                     </li>
                     <li class="list-inline-item">
-                        <a href="www.linkedin.com/in/loinp">
+                        <a href="https://www.linkedin.com/in/loinp">
                             <span class="fa-stack fa-lg">
                                 <i class="fa fa-circle fa-stack-2x"></i>
                                 <i class="fa fa-linkedin fa-stack-1x fa-inverse"></i>
